add_executable(fig1-3 fig1-3.c)
add_dependencies(fig1-3 apue_library)
target_link_libraries(fig1-3 PUBLIC apue_library)

add_executable(fig1-4 fig1-4.c)
add_dependencies(fig1-4 apue_library)
target_link_libraries(fig1-4 PUBLIC apue_library)

add_executable(fig1-5 fig1-5.c)
add_dependencies(fig1-5 apue_library)
target_link_libraries(fig1-5 PUBLIC apue_library)

add_executable(fig1-6 fig1-6.c)
add_dependencies(fig1-6 apue_library)
target_link_libraries(fig1-6 PUBLIC apue_library)

add_executable(fig1-7 fig1-7.c)
add_dependencies(fig1-7 apue_library)
target_link_libraries(fig1-7 PUBLIC apue_library)

add_executable(fig1-8 fig1-8.c)
add_dependencies(fig1-8 apue_library)
target_link_libraries(fig1-8 PUBLIC apue_library)
