unset(s)

foreach(num RANGE 3 10 1)
  unset(name)
  string(CONCAT name "fig1-" "${num}" ".c")
  list(APPEND s "${name}")
endforeach()

foreach(file IN LISTS s)
  unset(target)
  get_filename_component(target ${file} NAME_WLE)
  add_executable(${target} ${file})
  add_dependencies(${target} apue_library)
  target_link_libraries(${target} apue_library)
endforeach()
