add_executable(fig7-3 fig7-3.c)
add_dependencies(fig7-3 apue_library)
target_link_libraries(fig7-3 apue_library)

add_executable(fig7-9 fig7-9.c)
add_dependencies(fig7-9 apue_library)
target_link_libraries(fig7-9 apue_library)

add_executable(fig7-13 fig7-13.c)
add_dependencies(fig7-13 apue_library)
target_link_libraries(fig7-13 apue_library)
