add_executable(fig5-4 fig5-4.c)
add_dependencies(fig5-4 apue_library)
target_link_libraries(fig5-4 apue_library)

add_executable(fig5-5 fig5-5.c)
add_dependencies(fig5-5 apue_library)
target_link_libraries(fig5-5 apue_library)

add_executable(fig5-11 fig5-11.c)
add_dependencies(fig5-11 apue_library)
target_link_libraries(fig5-11 apue_library)

add_executable(fig5-12 fig5-12.c)
add_dependencies(fig5-12 apue_library)
target_link_libraries(fig5-12 apue_library)

add_executable(fig5-13 fig5-13.c)
add_dependencies(fig5-13 apue_library)
target_link_libraries(fig5-13 apue_library)
